add benchs & fix code

--- a/bench/package.json
+++ b/bench/package.json
@@ -12,6 +12,7 @@
     "log": "cd log && bun run deps && bun run build && bun run bench",
     "gzip": "cd gzip && bun run deps && bun run build && bun run bench",
     "async": "cd async && bun run deps && bun run build && bun run bench",
-    "sqlite": "cd sqlite && bun run deps && bun run build && bun run bench"
+    "sqlite": "cd sqlite && bun run deps && bun run build && bun run bench",
+    "modules:node_os": "cd modules/node_os && bun run deps &&bun run build && bun run bench"
   }
 }
