--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
       "type": "lldb",
       "request": "launch",
       "name": "bun run current file",
-      "program": "bun-debug",
+      "program": "/build/bun/packages/debug-bun-linux-x64/bun-debug",
       "args": ["${file}"],
       "cwd": "${file}/../../",
       "env": {
