feat: implement native os module (#1115)
* feat: implement os module

* revert(bun-error): package-lock.json

* feat: implement EOL

* feat: implement EOL

* feat: implement arch function

* feat: implement homedir function

* add comptime to homedir if

* feat: add platform function

* feat: implement type function

* feat: add hostname (not sure iff works on all platforms)

* chore: make requested changes

* fix: change toValueGC into toValue in arch function

* add EOL, devNull constant variables

* fix: store only string

* feat: add tests

* feat: add endianness

* ususe toValue for devNull & EOL

* feat: implement endianness & fix release

* revert javascript.zig fix

* feat: implement tmpdir

* feat: implement totalmem, freemem, uptime

* feat: loadavg

* feat: implement version

* feat: add userInfo

* feat: implement totalmem for macos

* feat: add getPriority (not finished, waiting for dc response)

* feat: finish userInfo implementation

* feat: implement cpus, not done

* feat: finish getPriority implementation & stats cpus()

* feat: implement setPriority

* reemove test.c

* feat: implement constants.dlope.xn, constants.priority.x, constants.UV_UDP_REUSEADDR

* feat: implement signals, errno

* updated cpus function, stilldoesnt work

* increase object length

* feat: add t more ests

* feat: add cpus()

* remov some files

* fix: handle empty array

* started working on interface addresses (in C)

ill use C++ after it work

* fix interface_addresses

* Improved getCpuInfo code, decreased ram usage, increased speed

* getCpuTime optimizations

* started working on networkInterfaces

* feat: networkInterfaces implementation

* delete unnecessary files

* add benchs & fix code

* add tests

* add missing benchs

* Increased buffer of getCpuInfo to 2048, it should skip few iterations

* remove hardcoded constants

* feat: implement errno constants

* 

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -164,7 +164,21 @@
     "numeric": "cpp",
     "set": "cpp",
     "__memory": "cpp",
-    "memory_resource": "cpp"
+    "memory_resource": "cpp",
+    "resource.h": "c",
+    "sysinfo.h": "c",
+    "*.tcc": "cpp",
+    "list": "cpp",
+    "shared_mutex": "cpp",
+    "cinttypes": "cpp",
+    "variant": "cpp",
+    "sysctl.h": "c",
+    "interface_adresses.h": "c",
+    "interface_addresses.h": "c",
+    "ctype.h": "c",
+    "ethernet.h": "c",
+    "inet.h": "c",
+    "packet.h": "c"
   },
   "cmake.configureOnOpen": false
 }
