--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "he": "^1.2.0",
     "html-entities": "^2.3.3",
     "prettier": "^2.4.1",
+    "svelte": "^3.50.0",
     "typescript": "4.6.3"
   },
   "version": "0.0.0"
