Update macOS contributing instructions

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,7 +7,7 @@ shallow = true
 fetchRecurseSubmodules = false
 [submodule "src/javascript/jsc/WebKit"]
 path = src/bun.js/WebKit
-url = https://github.com/Jarred-Sumner/WebKit.git
+url = https://github.com/oven-sh/WebKit.git
 ignore = dirty
 depth = 1
 update = none
