--- a/.gitmodules
+++ b/.gitmodules
@@ -69,9 +69,9 @@ ignore = dirty
 depth = 1
 shallow = true
 fetchRecurseSubmodules = false
-[submodule "src/deps/pcre2"]
-path = src/deps/pcre2
-url = https://github.com/PCRE2Project/pcre2.git
+[submodule "src/deps/oniguruma"]
+path = src/deps/oniguruma
+url = https://github.com/kkos/oniguruma
 ignore = dirty
 depth = 1
 shallow = true
