Fix failing macOS build

--- a/.github/workflows/bun-mac-aarch64.yml
+++ b/.github/workflows/bun-mac-aarch64.yml
@@ -194,8 +194,9 @@ jobs:
           WEBKIT_RELEASE_DIR: ${{ runner.temp }}/bun-webkit
           WEBKIT_RELEASE_DIR_LTO: ${{ runner.temp }}/bun-webkit
         run: |
-          mkdir -p $OBJ_DIR
+          mkdir -p $OBJ_DIR $BUN_DEPS_OUT_DIR
           make clean-bindings
+          make webcrypto
           make -j $(sysctl -n hw.ncpu) release-bindings
       - name: Upload C++
         if: matrix.compile_obj
