--- a/.github/workflows/bun-mac-x64.yml
+++ b/.github/workflows/bun-mac-x64.yml
@@ -3,6 +3,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   TEST_TAG: bun-test'
+concurrency: ${{ runner.name }}-${{ runner.os }}-${{ runner.arch }}
 
 on:
   push:
