Move this to dependencies so the .a files upload

--- a/.github/workflows/bun-mac-aarch64.yml
+++ b/.github/workflows/bun-mac-aarch64.yml
@@ -181,7 +181,7 @@ jobs:
           WEBKIT_RELEASE_DIR_LTO: ${{ runner.temp }}/bun-webkit
         run: |
           mkdir -p $BUN_DEPS_OUT_DIR
-          make vendor-without-check
+          make vendor-without-check webcrypto
       - name: Compile C++
         if: matrix.compile_obj
         env:
@@ -197,7 +197,6 @@ jobs:
         run: |
           mkdir -p $OBJ_DIR $BUN_DEPS_OUT_DIR
           make clean-bindings
-          make webcrypto
           make -j $(sysctl -n hw.ncpu) release-bindings
       - name: Upload C++
         if: matrix.compile_obj
