--- a/.github/workflows/bun-mac-x64.yml
+++ b/.github/workflows/bun-mac-x64.yml
@@ -28,6 +28,7 @@ jobs:
   macos-object-files:
     name: macOS Object
     runs-on: zig-object
+    concurrency: macos
     strategy:
       matrix:
         include:
