--- a/.github/workflows/bun-mac-x64-baseline.yml
+++ b/.github/workflows/bun-mac-x64-baseline.yml
@@ -176,7 +176,7 @@ jobs:
           WEBKIT_RELEASE_DIR: ${{ runner.temp }}/bun-webkit
           WEBKIT_RELEASE_DIR_LTO: ${{ runner.temp }}/bun-webkit
         run: |
-          mkdir -p $BUN_DEPS_OUT_DIR
+          mkdir -p $OBJ_DIR $BUN_DEPS_OUT_DIR
           make vendor-without-check webcrypto
       - name: Compile C++
         if: matrix.compile_obj
@@ -191,7 +191,6 @@ jobs:
           WEBKIT_RELEASE_DIR_LTO: ${{ runner.temp }}/bun-webkit
         run: |
           mkdir -p $OBJ_DIR $BUN_DEPS_OUT_DIR
-
           make -j $(sysctl -n hw.ncpu) release-bindings
       - name: Upload C++
         if: matrix.compile_obj
