--- a/.github/workflows/bun-homebrew.yml
+++ b/.github/workflows/bun-homebrew.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   homebrew:
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'oven-sh' && !github.event.release.draft
+    if: github.repository_owner == 'oven-sh' && github.event.release.published_at != null
     steps:
       - id: checkout
         name: Checkout
