--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "express": "^4.18.2",
     "mitata": "^0.1.3",
     "peechy": "0.4.32",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "next",
+    "react-dom": "next"
   },
   "private": true,
   "scripts": {
