--- a/bench/websocket-server/tsconfig.json
+++ b/bench/websocket-server/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
+    // no lib needed
+    "lib": [
+      "ESNext"
+    ],
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
-
     // so that if your project isn't using TypeScript, it still has autocomplete
     "allowJs": true,
-
     // "bun-types" is the important part
-    "types": ["bun-types"]
+    "typeRoots": [
+      "../../packages"
+    ],
+    "types": [
+      "bun-types"
+    ]
   }
 }
