--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "bun-types": "latest",
     "express": "^4.18.2",
     "mitata": "^0.1.3",
     "peechy": "0.4.32",
@@ -13,11 +12,12 @@
     "build-fallback": "esbuild --target=esnext  --bundle src/fallback.ts --format=iife --platform=browser --minify > src/fallback.out.js"
   },
   "devDependencies": {
+    "@types/react": "^18.0.25",
     "he": "^1.2.0",
     "html-entities": "^2.3.3",
     "prettier": "^2.4.1",
     "svelte": "^3.50.0",
-    "typescript": "4.6.3"
+    "typescript": "latest"
   },
   "version": "0.0.0"
 }
