--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -122,17 +122,18 @@ jobs:
           path: ${{runner.temp}}/release/bun-${{matrix.tag}}.zip
       - name: Release
         id: release
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1
         if: github.ref == 'refs/heads/main'
         with:
           prerelease: true
-          generate_release_notes: true
-          body: "This is the canary release of Bun that corresponds to the commit [${{ github.sha }}]"
+          body: "This canary release of Bun corresponds to the commit [${{ github.sha }}]"
+          allowUpdates: true
+          replacesArtifacts: true
+          generateReleaseNotes: true
+          artifactErrorsFailBuild: true
           name: "Canary (${{github.sha}})"
-          tag_name: "canary"
-          files: |
-            ${{runner.temp}}/release/bun-${{matrix.tag}}.zip
-            ${{runner.temp}}/release/bun-${{matrix.tag}}-profile.zip
+          tag: "canary"
+          artifacts: "${{runner.temp}}/release/bun-${{matrix.tag}}.zip,${{runner.temp}}/release/bun-${{matrix.tag}}-profile.zip"
       - uses: actions/upload-artifact@v3
         with:
           name: bun-obj-${{matrix.tag}}
