--- a/.github/workflows/bun-mac-x64.yml
+++ b/.github/workflows/bun-mac-x64.yml
@@ -194,13 +194,13 @@ jobs:
           make -j $(sysctl -n hw.ncpu) release-bindings
       - name: Upload C++
         if: matrix.compile_obj
-        uses: actions/upload-artifact@v3
+        uses: alehechka/upload-tartifact@v1
         with:
           name: ${{ matrix.tag }}-cpp
           path: ${{ runner.temp }}/bun-cpp-obj
       - name: Upload Dependencies
         if: matrix.dependencies
-        uses: actions/upload-artifact@v3
+        uses: alehechka/upload-tartifact@v1
         with:
           name: ${{ matrix.tag }}-deps
           path: ${{runner.temp}}/bun-deps
@@ -273,12 +273,12 @@ jobs:
           mkdir -p $JSC_BASE_DIR
           curl -L ${{ matrix.webkit_url }} | tar -xz -C $JSC_BASE_DIR --strip-components=1
       - name: Download C++
-        uses: actions/download-artifact@v3
+        uses: alehechka/download-tartifact@v1
         with:
           name: ${{ matrix.tag }}-cpp
           path: ${{ runner.temp }}/bun-cpp-obj
       - name: Download Dependencies
-        uses: actions/download-artifact@v3
+        uses: alehechka/download-tartifact@v1
         with:
           name: ${{ matrix.tag }}-deps
           path: ${{ runner.temp }}/bun-deps
@@ -350,4 +350,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           name: "Canary (${{github.sha}})"
           tag: "canary"
-          artifacts: "${{runner.temp}}/release/bun-${{matrix.tag}}.zip,${{runner.temp}}/release/bun-${{matrix.tag}}-profile.zip"
+          artifacts: "${{runner.temp}}/release/${{matrix.tag}}.zip,${{runner.temp}}/release/${{matrix.tag}}-profile.zip"
