Fix types in tests

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -3,6 +3,8 @@
     "lib": ["ESNext"],
     "module": "esnext",
     "target": "esnext",
-    "typeRoots": ["../types"]
+    "moduleResolution": "node",
+    "typeRoots": ["../packages"],
+    "types": ["bun-types"]
   }
 }
