--- a/packages/bun-types/tsconfig.json
+++ b/packages/bun-types/tsconfig.json
@@ -12,7 +12,7 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
-    // "disableSolutionSearching": true
+    "disableSolutionSearching": true
   },
   // "include": [
   //   "./*.d.ts",
