--- a/bench/websocket-server/tsconfig.json
+++ b/bench/websocket-server/tsconfig.json
@@ -1,20 +1,21 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     // no lib needed
-    "lib": [
-      "ESNext"
-    ],
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node",
-    // so that if your project isn't using TypeScript, it still has autocomplete
-    "allowJs": true,
-    // "bun-types" is the important part
-    "typeRoots": [
-      "../../packages"
-    ],
-    "types": [
-      "bun-types"
-    ]
+    // "lib": [
+    //   "ESNext"
+    // ],
+    // "module": "esnext",
+    // "target": "esnext",
+    // "moduleResolution": "node",
+    // // so that if your project isn't using TypeScript, it still has autocomplete
+    // "allowJs": true,
+    // "typeRoots": [
+    //   "../../packages"
+    // ],
+    // // "bun-types" is the important part
+    // "types": [
+    //   "bun-types"
+    // ]
   }
 }
