--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "he": "^1.2.0",
     "html-entities": "^2.3.3",
     "prettier": "^2.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "svelte": "^3.50.0",
     "typescript": "latest"
   },
