--- a/packages/bun-types/package.json
+++ b/packages/bun-types/package.json
@@ -13,14 +13,14 @@
     "lint:fix": "eslint './**/*.d.ts' --fix"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "latest",
+    // "@typescript-eslint/eslint-plugin": "^5.31.0",
+    // "@typescript-eslint/parser": "^5.31.0",
+    // "eslint": "^8.20.0",
+    // "eslint-config-prettier": "^8.5.0",
+    // "prettier": "latest",
     "tsd": "^0.22.0",
     "typedoc": "^0.23.9",
-    "typescript": "^4.7.4"
+    // "typescript": "^4.7.4"
   },
   "tsd": {
     "directory": "tests"
