--- a/packages/bun-types/tsconfig.docs.json
+++ b/packages/bun-types/tsconfig.docs.json
@@ -18,8 +18,8 @@
   ],
   "exclude": [
     "node_modules",
-    // "./node_modules",
-    // "./node_modules/*",
-    // "./node_modules/@types/node/index.d.ts"
+    "./node_modules",
+    "./node_modules/*",
+    "./node_modules/@types/node/index.d.ts"
   ]
 }
