--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "compilerOptions": {
-    "lib": ["ESNext"],
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node",
-    "typeRoots": ["../packages"],
-    "types": ["bun-types"]
-  }
+  "extends": "../tsconfig.base.json",
 }
