--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
     "mitata": "^0.1.3",
     "peechy": "0.4.32",
     "react": "next",
-    "react-dom": "next"
+    "react-dom": "next",
+    "svelte": "^3.52.0"
   },
   "private": true,
   "scripts": {
     "build-runtime": "esbuild --target=esnext  --bundle src/runtime/index.ts --format=iife --platform=browser --global-name=BUN_RUNTIME > src/runtime.out.js; cat src/runtime.footer.js >> src/runtime.out.js",
-    "build-fallback": "esbuild --target=esnext  --bundle src/fallback.ts --format=iife --platform=browser --minify > src/fallback.out.js"
+    "build-fallback": "esbuild --target=esnext  --bundle src/fallback.ts --format=iife --platform=browser --minify > src/fallback.out.js",
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
-    "he": "^1.2.0",
-    "html-entities": "^2.3.3",
-    "prettier": "^2.4.1",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
-    "svelte": "^3.50.0",
+    "he": "^1.2.0",
+    "html-entities": "^2.3.3",
+    "prettier": "^2.4.1",
     "typescript": "latest"
   },
   "version": "0.0.0"
