--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,22 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "noEmit": true,
-    "skipLibCheck": true
-    // "allowJs": true
+    "skipLibCheck": true,
+    "allowJs": true
   },
   "include": [
     "."
   ],
   "exclude": [
-    "src/test"
+    "src/test",
+    "packages",
+    "examples",
+    "bench",
+    "test/bun.js/solid-dom-fixtures",
+    "test/bun.js/bundled",
+    "src/bun.js/builtins",
+    "src/api/demo",
+    "test/snapshots",
+    "test/snapshots-no-hmr"
   ]
 }
