--- a/src/cli/tsconfig-for-init.json
+++ b/src/cli/tsconfig-for-init.json
@@ -5,15 +5,16 @@
     ],
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "strict": true,
+    "downlevelIteration": true,
     "skipLibCheck": true,
+    "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    // so that if your project isn't using TypeScript, it still has autocomplete
     "allowJs": true,
-    // "bun-types" is the important part
     "types": [
-      "bun-types"
+      "bun-types" // add Bun global
     ]
   }
 }
