--- a/packages/bun-types/package.json
+++ b/packages/bun-types/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "repository": "https://github.com/oven-sh/bun-types",
   "scripts": {
-    "generate:package": "rm -rf ./dist && bun scripts/bundle.ts ./dist && bun run fmt",
-    "docs": "bun run generate:package && typedoc",
-    "generate:githubstuff": "bun scripts/generate.ts",
+    "build": "rm -rf ./dist && bun scripts/bundle.ts ./dist && bun run fmt",
+    "docs": "bun run build && typedoc",
     "fmt": "prettier --write './**/*.d.ts'",
     "test": "tsd",
     "lint": "eslint './**/*.d.ts'",
