Fix `Buffer.from(text, "base64")` and `Buffer.toString("base64")`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -182,5 +182,6 @@
     "packet.h": "c",
     "queue": "cpp"
   },
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "C_Cpp.errorSquiggles": "Enabled"
 }
