--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "scripts": {
     "build-runtime": "esbuild --target=esnext  --bundle src/runtime/index.ts --format=iife --platform=browser --global-name=BUN_RUNTIME > src/runtime.out.js; cat src/runtime.footer.js >> src/runtime.out.js",
     "build-fallback": "esbuild --target=esnext  --bundle src/fallback.ts --format=iife --platform=browser --minify > src/fallback.out.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "fmt": "prettier --write './**/*.d.ts'",
+    "lint": "eslint './**/*.d.ts'",
+    "lint:fix": "eslint './**/*.d.ts' --fix"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
