--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "mitata": "^0.1.3",
     "peechy": "0.4.32",
     "react": "next",
-    "react-dom": "next",
-    "svelte": "^3.52.0"
+    "react-dom": "next"
   },
   "private": true,
   "scripts": {
@@ -13,7 +12,6 @@
     "build-fallback": "esbuild --target=esnext  --bundle src/fallback.ts --format=iife --platform=browser --minify > src/fallback.out.js",
     "typecheck": "tsc",
     "fmt": "prettier --write './**/*.{ts,tsx,js,jsx}'",
-    "fmt:types": "prettier --write './packages/bun-types/*.d.ts'",
     "lint": "eslint './**/*.d.ts'",
     "lint:fix": "eslint './**/*.d.ts' --fix"
   },
@@ -26,6 +24,7 @@
     "he": "^1.2.0",
     "html-entities": "^2.3.3",
     "prettier": "^2.4.1",
+    "svelte": "^3.52.0",
     "typescript": "latest"
   },
   "version": "0.0.0"
