--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,9 @@
 src/fallback.html
-src/test
+# src/test
 bench
 test/bun.js/solid-dom-fixtures
 test/bun.js/bundled
 src/bun.js/builtins
-src/api/demo
+# src/api/demo
 test/snapshots
 test/snapshots-no-hmr
