Only run this for bun-types

--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -1,7 +1,12 @@
-name: Tests
+name: bun-types tests
 on:
   push:
+    paths:
+    - packages/bun-types/**/*
   pull_request:
+    paths:
+      - packages/bun-types/**/*
+
 
 jobs:
   tests:
