--- a/.github/workflows/bun-mac-aarch64.yml
+++ b/.github/workflows/bun-mac-aarch64.yml
@@ -42,8 +42,8 @@ jobs:
             tag: bun-obj-darwin-aarch64
     steps:
       - uses: actions/checkout@v3
-      - name: Checkout submodules
-        run: git -c submodule."src/bun.js/WebKit".update=none submodule update --init --recursive --depth=1 --progress -j $(nproc)
+        with:
+          submodules: recursive
       - uses: docker/setup-buildx-action@v2
         id: buildx
         with:
