--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -55,6 +55,7 @@ jobs:
             webkit_basename: "bun-webkit-linux-arm64-lto"
 
     steps:
+      - run: git rm --cached src/deps/libbacktrace
       - uses: actions/checkout@v3
         with:
           submodules: recursive
