--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@ fetchRecurseSubmodules = false
 [submodule "src/javascript/jsc/WebKit"]
 path = src/bun.js/WebKit
 url = https://github.com/oven-sh/WebKit.git
-ignore = all
+ignore = dirty
 depth = 1
 update = none
 shallow = true
