--- a/.github/workflows/bun-mac-aarch64.yml
+++ b/.github/workflows/bun-mac-aarch64.yml
@@ -146,10 +146,21 @@ jobs:
           OBJ_DIR: ${{ runner.temp }}/bun-cpp-obj
           BUN_DEPS_OUT_DIR: ${{runner.temp}}/bun-deps
         run: |
-          brew install rust llvm@13 pkg-config coreutils libtool cmake libiconv automake openssl@1.1 ninja gnu-sed pkg-config esbuild --force
+          brew install ccache rust llvm@13 pkg-config coreutils libtool cmake libiconv automake openssl@1.1 ninja gnu-sed pkg-config esbuild --force
+          echo "export PATH=$(brew --prefix ccache)/bin:\$PATH" >> $GITHUB_ENV
           echo "export PATH=$(brew --prefix coreutils)/libexec/gnubin:\$PATH" >> $GITHUB_ENV
           echo "export PATH=$(brew --prefix llvm@13)/bin:\$PATH" >> $GITHUB_ENV
           brew link --overwrite llvm@13
+      - name: ccache (dependencies)
+        uses: hendrikmuhs/ccache-action@v1.2
+        if: matrix.dependencies
+        with:
+          key: ${{ runner.os }}-ccache-${{ matrix.tag }}-dependencies
+      - name: ccache (c++)
+        uses: hendrikmuhs/ccache-action@v1.2
+        if: matrix.compile_obj
+        with:
+          key: ${{ runner.os }}-ccache-${{ matrix.tag }}-obj
       - name: Download WebKit
         if: matrix.compile_obj
         env:
